--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://gladyoucame.github.io
-title: Glad You Came
+title: Narrow Margin
 subtitle: A little something about mathematics.
 author: bill
 simple_search: http://google.com/search
